Data Transformation added. Fixed more bugs from naming conventions

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -19,3 +19,7 @@ data_validation_config:
   books_csv_file: BX-Books.csv
   ratings_csv_file: BX-Book-Ratings.csv
   users_csv_file: BX-Users.csv
+
+
+data_transformation_config:
+  transformed_data_dir: transformed_data
