--- a/config/config.yaml
+++ b/config/config.yaml
@@ -6,11 +6,7 @@ data_ingestion_config:
     books: "https://github.com/Jimster397/Book-recommender-system-collab-filtering/releases/download/v1.0/BX-Books.csv"
     ratings: "https://github.com/Jimster397/Book-recommender-system-collab-filtering/releases/download/v1.0/BX-Book-Ratings.csv"
     users: "https://github.com/Jimster397/Book-recommender-system-collab-filtering/releases/download/v1.0/BX-Users.csv"
-  
-  root_dir: artifacts/data_ingestion
-  local_data_dir: artifacts/data_ingestion/dataset
   raw_data_dir: artifacts/data_ingestion/raw_data
-  ingested_dir: artifacts/data_ingestion/ingested_data
 
 
 data_validation_config:
@@ -23,3 +19,12 @@ data_validation_config:
 
 data_transformation_config:
   transformed_data_dir: transformed_data
+
+
+model_trainer_config:
+  trained_model_dir: trained_model
+  trained_model_name: model.pkl
+
+
+recommendation_config:
+  poster_api_url: https://api.themoviedb.org/3/movie/{}?api_key=8265bd1679663a7ea12ac168da84d2e8&language=en-US
